fix alignment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -971,6 +971,10 @@ input[type="submit"], input[type="reset"], input[type="button"] {
     width: 90%;
 }
 
+.featured__details__main p {
+    padding-left: 10px;
+}
+
 img.featured__details__logo[src="images/donorschoose.svg"] {
     max-width: 220px;
 
